fix security allow all routes jwt manual check